<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name" translatable="false">ACME Butchers</string>

  <!-- Error messages -->
  <string name="exception_message_generic">There was an application error</string>
  <string name="error_loading_images">There was an error loading the images</string>
  <string name="error_loading_shops">There was an error loading the butcher shops</string>
  <string name="error_loading_tweets">There was an error loading the tweets</string>

  <!-- Main -->
  <string name="main_intro_description">At ACME butchers we offer you the best meats, sausages
    and prepared dishes.</string>
  <string name="main_delivery_title">Home delivery</string>
  <string name="main_delivery_description">Place your order today and have it ready at home
    by tomorrow.</string>
  <string name="main_cut_title">Traditional cut</string>
  <string name="main_cut_description">Our cut is artisan and traditional.</string>
  <string name="main_quality_title">Quality</string>
  <string name="main_quality_description">Meat with quality from the Pyrenean valleys.</string>
  <string name="main_service_title">24h Service</string>
  <string name="main_service_description">We guarantee that we will comply in 24h with our
    commitments.</string>
  <string name="main_restoration_title">Restoration</string>
  <string name="main_restoration_description">We serve the best restaurants.</string>
  <string name="main_butcher_title">Butcher shop</string>
  <string name="main_butcher_description">The best pieces of Iberian ham and traditional
    sausages.</string>
  <string name="permission_location_rationale">Location permission required.</string>
  <string name="permission_location_not_granted">Location permission not granted.</string>
  <string name="enable_location">Location must be enabled.</string>

  <!-- Navigation -->
  <string name="open_drawer">Open</string>
  <string name="close_drawer">Close</string>
  <string name="home">Home</string>
  <string name="map">Map</string>
  <string name="tweets" translatable="false">Tweets</string>

  <!-- Retry -->
  <string name="btn_text_retry">Retry</string>

  <!-- Tweets -->
  <string name="tweets_empty">No tweets</string>
  <string name="tweets_avatar_description" translatable="false">Avatar</string>
</resources>
